--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <section class="items"></section>
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
+        <span class="loading">Carregando a pagina...</span>
+        <ol class="total-price">Somatorio:</ol>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
       </section>
