--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script async src="script.js"></script>
   </head>
 
   <body>
@@ -15,10 +15,11 @@
       <section class="cart">
         <span class="cart__title">Carrinho de compras</span>
         <span class="loading">Carregando a pagina...</span>
-        <ol class="total-price">Somatorio:</ol>
+        <span class="total-price">Somatorio:</span>
         <button class="empty-cart">Esvaziar carrinho</button>
         <ol class="cart__items"></ol>
       </section>
     </section>
+
   </body>
 </html>
